trial stuff done mvp wise

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,10 +1,10 @@
 <div ng-controller="NavCtrl">
 	<ul id="slide-out" class="side-nav fixed z-depth-0">
 		<li>
-			<img class="heartLogo" src="../img/like.svg">
+			<img class="heartLogo" src="../img/logo.png">
 		</li>
 		<li>
-			<h2 class="center-align">{{view}}</h2>
+			<h2 class="center-align titleInNav">{{view}}</h2>
 		</li>
 		<li>
 			<div class="navLine"></div>
