--- a/partials/profile.html
+++ b/partials/profile.html
@@ -89,11 +89,11 @@
   <div class="modal-content">
     <div class="row">
       <div input-field class="col s12">
-        <p>Are you sure you want to delete {{child.name}}?</p>
+        <p>Are you sure you want to delete {{child.name}}'s profile?</p>
       </div>
 		</div>
   </div>
   <div class="modal-footer">
-    <a href="#!/" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="deleteChild()">Delete {{child.name}}</a>
+    <a href="#!/" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="deleteChild()">Delete {{child.name}}'s Profile</a>
   </div>
 </div>
