--- a/partials/rxnDetail.html
+++ b/partials/rxnDetail.html
@@ -233,7 +233,7 @@
   <div class="modal-content">
     <div class="row">
       <div input-field class="col s12">
-        <p>Are you sure you want to this event?</p>
+        <p>Are you sure you want to delete this event?</p>
       </div>
     </div>
   </div>
