--- a/sass/_navbar.sass
+++ b/sass/_navbar.sass
@@ -14,5 +14,8 @@
 	width: 300px
 
 .heartLogo
-	height: 75px
-	margin: 25px 0 0 50px
+	height: 100px
+	margin: 50px 0 0 90px
+
+.titleInNav
+	margin-top: 0
