--- a/partials/chooseChild.html
+++ b/partials/chooseChild.html
@@ -1,10 +1,23 @@
-<div ng-repeat="item in children">
-<a ng-href="#!/profile/{{item.id}}">{{item.name}}</a>
+<div class="container">
+  <div class="row">
+    <div class="col m12 center-align">
+      <h5 class="chooseChild">Choose Child's Profile</h5>
+    </div>
+  </div>
+  <div class="row" ng-repeat="item in children">
+    <div class="col m12 center-align">
+      <a ng-href="#!/profile/{{item.id}}">
+        <h2>{{item.name}}</h2>
+      </a>
+    </div>
+  </div>
 </div>
 
 <!-- Add Child Modal Trigger -->
-<div class="col m4">
-  <a class='waves-effect waves-teal btn-flat' data-target='addChildModal' modal>Add Child</a>
+<div class="row">
+  <div class="col m4 offset-m4 center-align">
+    <a class='waves-effect waves-yellow lighten-4 btn-flat' data-target='addChildModal' modal>Add Child</a>
+  </div>
 </div>
 
 
