--- a/partials/profile.html
+++ b/partials/profile.html
@@ -1,9 +1,24 @@
 <!-- Profile -->
-<div class="container">
+<div class="container profileContainer">
 	<div class="row">
-		<div class="col m12 center-align">
+		<div class="col m12 right-align">
+			<!-- Edit/Delete Dropdown Trigger -->
+			<a class='dropdown-button btn-flat' href='javascript:void(0);' data-activates='demoDropdown' dropdown data-hover="true">
+			  <i class="material-icons">list</i>
+			</a>
+
+			<!-- Dropdown Structure -->
+			<ul id='demoDropdown' class='dropdown-content'>
+		    <li class='center-align'><a data-target='editChildModal' modal><i class="small material-icons">mode_edit</i></a></li>
+		    <li><a data-target='deleteChildModal' modal><i class="small material-icons">delete</i></a></li>
+			</ul>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col m4 offset-m4 center-align">
 			<h2>{{child.name}}</h2>
 		</div>
+
 	</div>
 	<div class="row">
 		<div class="col m12 center-align">
@@ -23,18 +38,6 @@
 			<h4>{{numSafes}} Safe Foods</h4>
 		</div>
 	</div>
-
-<!-- Edit/Delete Child Buttons -->
-	<div class="row">
-		<div class="col m4">
-		  <a data-target='editChildModal' modal><i class="small material-icons">mode_edit</i></a>
-		</div>
-		<div class="col m4">
-		  <a data-target='deleteChildModal' modal><i class="small material-icons">delete</i></a>
-		</div>
-	</div>
-</div>
-
 
 <!-- edit Child Modal -->
 <div id="editChildModal" class="modal">
