--- a/sass/_profile.sass
+++ b/sass/_profile.sass
@@ -21,3 +21,9 @@ input.data-list-input
 input.data-list-input[type=text]:focus:not([readonly])
 	border-bottom: none
 	box-shadow: 0 0 0
+
+.dropdown-content
+	background-color: $FPIES-lite
+
+.dropdown-content li>a
+		color: $text
