--- a/sass/main.sass
+++ b/sass/main.sass
@@ -7,6 +7,7 @@ $accent: #F8FF91
 @import navbar
 @import profile
 @import rxnDetail
+@import chooseChild
 // Overall Styles
 body
 	background-color: $FPIES-med
