decided on a solution for the gender options for now

--- a/css/main.css
+++ b/css/main.css
@@ -40,10 +40,10 @@ input.data-list-input[type=text]:focus:not([readonly]) {
   border-bottom: none;
   box-shadow: 0 0 0; }
 
-.dropdown-content {
+.profileView .dropdown-content {
   background-color: #b2e8e3; }
 
-.dropdown-content li > a {
+.profileView .dropdown-content li > a {
   color: #003366; }
 
 .event {
