--- a/partials/chooseChild.html
+++ b/partials/chooseChild.html
@@ -54,9 +54,10 @@
       <div input-field class="col s12 data-list-input">
         <select class="data-list-input" ng-model="newChild.gender" material-select watch>
           <option value="" disabled>Choose your option</option>
-          <option value="other">Other, please specify</option>
+          <!-- <option value="other">Other, please specify</option> -->
           <option value="boy">Boy</option>
           <option value="girl">Girl</option>
+          <option value="">Other</option>
           <option value="">Prefer Not to Answer</option>
         </select>
         <label>Gender</label>
