--- a/sass/_profile.sass
+++ b/sass/_profile.sass
@@ -22,8 +22,10 @@ input.data-list-input[type=text]:focus:not([readonly])
 	border-bottom: none
 	box-shadow: 0 0 0
 
-.dropdown-content
-	background-color: $FPIES-lite
+.profileView
+	.dropdown-content
+		background-color: $FPIES-lite
 
-.dropdown-content li>a
+.profileView
+	.dropdown-content li>a
 		color: $text
