--- a/sass/main.sass
+++ b/sass/main.sass
@@ -8,6 +8,7 @@ $accent: #F8FF91
 @import profile
 @import rxnDetail
 @import chooseChild
+@import trigger
 // Overall Styles
 body
 	background-color: $FPIES-med
