--- a/partials/safe.html
+++ b/partials/safe.html
@@ -6,8 +6,8 @@
     </div>
     <div class="col m8">
       <div input-field>
-        <select class="" ng-model="selectedValue" material-select watch>
-          <option>All</option>
+        <select class="" ng-model="selectedNutrient" material-select watch>
+          <option value="all">All</option>
           <option ng-repeat="value in reduced" value={{value}}>{{value}}</option>
         </select>
       </div>
@@ -15,7 +15,7 @@
   </div>
 
 <!-- Safes list -->
-  <div class="row" ng-repeat="item in safeList">
+  <div class="row" ng-repeat="item in safeList | orderBy: 'food'">
     <div class="col m2">
       <a class="waves-effect waves-teal btn-flat"  data-target='editSafeModal' ng-click="getSafe( item.id )" modal><i class="material-icons">mode_edit</i></a>
     </div>
