--- a/partials/trigger.html
+++ b/partials/trigger.html
@@ -1,19 +1,45 @@
 <!-- Add Trigger Modal Trigger -->
 <div class="container">
+  <div class="row"></div>
   <div class="row">
-    <div class="col m4">
+    <div class="col m4 offset-m4 center-align">
       <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' data-target='addTriggerModal' modal>Add Trigger</a>
     </div>
+<!--     <div class="col m8">
+      <div input-field>
+        <input type="text" ng-model="searchText">
+        <label>Search</label>
+      </div>
+    </div> -->
   </div>
 
 <!-- Trigger List, including modal triggers for edit, delete, and detail -->
-<div class="row" ng-repeat="item in triggerList | orderBy: 'food'">
-    <div class="col m2 offset-m2">
-      <a class="waves-effect waves-yellow lighten-4 btn-flat"  data-target='editTriggerModal' ng-click="getTrigger( item.id )" modal><i class="material-icons">mode_edit</i></a>
-      <a class="waves-effect waves-yellow lighten-4 btn-flat"  data-target='deleteTriggerModal' ng-click="getTrigger( item.id )" modal><i class="material-icons">delete</i></a>
+  <div ng-repeat="item in triggerList | orderBy: 'food'">
+    <div class="row triggerRow">
+      <div class="col m2 offset-m5">
+        <div style="position: relative; height: 70px;">
+          <div class="fixed-action-btn horizontal"  style="position: static">
+            <a class="btn-floating btn-large triggerBtn" style="position: absolute; left: 10px; background-color: #F8FF91;">
+              <strong style="color: #003366;">{{$index + 1}}</strong>
+            </a>
+            <ul>
+              <li><a class="btn-floating white" data-target="triggerDetailModal" ng-click="getTrigger( item.id )" modal><i class="material-icons" style="color: #529e99;">launch</i></a></li>
+              <li><a class="btn-floating white" data-target='deleteTriggerModal' ng-click="getTrigger( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">delete</i></a></li>
+              <li><a class="btn-floating white" data-target='editTriggerModal' ng-click="getTrigger( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">mode_edit</i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="col m8">
-      <a data-target="triggerDetailModal" ng-click="getTrigger( item.id )" modal><h4>{{item.food}}</h4></a>
+    <div class="row">
+      <div class="col m12 center-align">
+        <a data-target="triggerDetailModal" ng-click="getTrigger( item.id )" modal><h4>{{item.food}}</h4></a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col m6 offset-m3">
+        <div class="bottomBorder"></div>
+      </div>
     </div>
   </div>
 </div>
