--- a/partials/chooseChild.html
+++ b/partials/chooseChild.html
@@ -7,7 +7,7 @@
   <div class="row" ng-repeat="item in children">
     <div class="col m12 center-align">
       <a ng-href="#!/profile/{{item.id}}">
-        <h2>{{item.name}}</h2>
+        <h2 class="specialFont">{{item.name}}</h2>
       </a>
     </div>
   </div>
