--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -4,14 +4,14 @@
 			<img class="heartLogo" src="../img/logo.png">
 		</li>
 		<li>
-			<h2 class="center-align titleInNav">{{view}}</h2>
+			<h2 class="center-align titleInNav specialFont">{{view}}</h2>
 		</li>
 		<li>
 			<div class="navLine"></div>
 		</li>
 	  <li>
 	  	<a class="center-align" href="#!/profile/{{currentChildId}}" ng-show="isChild">
-	  		<h3>{{currentChild}}</h3>
+	  		<h3 class="specialFont">{{currentChild}}</h3>
 	  	</a>
 	  </li>
 	  <li>
