--- a/sass/main.sass
+++ b/sass/main.sass
@@ -9,12 +9,15 @@ $accent: #F8FF91
 @import rxnDetail
 @import chooseChild
 @import trigger
+@import url('https://fonts.googleapis.com/css?family=Abel|Abril+Fatface');
 // Overall Styles
 body
 	background-color: $FPIES-med
 	background: linear-gradient(to bottom right, $FPIES-lite, $FPIES-med, $FPIES)
 	min-height: 100vh
 	color: $text
+	font-family: "Abel", sans-serif
+	font-size: 1.5em
 
 body a
 	color: $text
@@ -23,6 +26,9 @@ body a
 	position: fixed
 	bottom: 0
 	right: 5px
+
+.specialFont
+	font-family: 'Abril Fatface', sans-serif;
 
 header, footer, main 
 	padding-left: 300px
