--- a/partials/profile.html
+++ b/partials/profile.html
@@ -16,19 +16,19 @@
 
 <div class="container profileContainer">
 	<div class="row">
-		<div class="col m4 offset-m4 center-align">
-			<h2>{{child.name}}</h2>
+		<div class="col m12 center-align">
+			<h2 class="specialFont">{{child.name}}</h2>
 		</div>
 
 	</div>
 	<div class="row">
 		<div class="col m12 center-align">
-			<h2>{{child.age}} year old {{child.gender}}</h2>
+			<h2 class="specialFont">{{child.age}} year old {{child.gender}}</h2>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col m12 center-align">
-			<h2>{{child.wtNumber}} {{child.wtUnit}}</h2>
+			<h2 class="specialFont">{{child.wtNumber}} {{child.wtUnit}}</h2>
 		</div>
 	</div>
 	<div class="row">
