--- a/partials/profile.html
+++ b/partials/profile.html
@@ -3,7 +3,7 @@
 	<div class="col m12 right-align profileView">
 		<!-- Edit/Delete Dropdown Trigger -->
 		<a class='dropdown-button btn-flat' href='javascript:void(0);' data-activates='demoDropdown' dropdown data-hover="true">
-		  <i class="material-icons">list</i>
+		  <i class="material-icons">menu</i>
 		</a>
 
 		<!-- Dropdown Structure -->
