--- a/partials/safe.html
+++ b/partials/safe.html
@@ -1,21 +1,22 @@
 <!-- Add Safe Modal Trigger -->
 <div class="container">
+  <div class="row"></div>
   <div class="row">
-    <div class="col m4">
+    <div class="col m12 center-align">
       <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' data-target='addSafeModal' modal>Add Safe</a>
     </div>
-    <div class="col m8">
+  <!--     <div class="col m8">
       <div input-field>
         <select class="" ng-model="selectedNutrient" material-select watch>
           <option value="all">All</option>
           <option ng-repeat="value in reduced" value={{value}}>{{value}}</option>
         </select>
       </div>
-    </div>
+    </div> -->
   </div>
 
-<!-- Safes list -->
-  <div class="row" ng-repeat="item in safeList | orderBy: 'food'">
+  <!-- Safes list -->
+<!--   <div class="row" ng-repeat="item in safeList | orderBy: 'food'">
     <div class="col m2">
       <a class="waves-effect waves-teal btn-flat"  data-target='editSafeModal' ng-click="getSafe( item.id )" modal><i class="material-icons">mode_edit</i></a>
     </div>
@@ -25,8 +26,39 @@
     <div class="col m8">
       <h2>{{item.food}}</h2>
     </div>
+  </div> -->
+
+  <div ng-repeat="item in safeList | orderBy: 'food'">
+    <div class="row triggerRow">
+      <div class="col m2 offset-m5">
+        <div style="position: relative; height: 70px;">
+          <div class="fixed-action-btn horizontal"  style="position: static">
+            <a class="btn-floating btn-large triggerBtn" style="position: absolute; left: 10px; background-color: #F8FF91;">
+              <strong style="color: #003366;">{{$index + 1}}</strong>
+            </a>
+            <ul>
+              <li><a class="btn-floating white" data-target='deleteSafeModal' ng-click="getSafe( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">delete</i></a></li>
+              <li><a class="btn-floating white" data-target='editSafeModal' ng-click="getSafe( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">mode_edit</i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col m12 center-align">
+        <h4>{{item.food}}</h4></a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col m6 offset-m3">
+        <div class="bottomBorder"></div>
+      </div>
+    </div>
   </div>
+
 </div>
+
+
 
 
 <!-- Add Safe Modal -->
