--- a/sass/main.sass
+++ b/sass/main.sass
@@ -9,7 +9,7 @@ $accent: #F8FF91
 @import rxnDetail
 @import chooseChild
 @import trigger
-@import url('https://fonts.googleapis.com/css?family=Abel|Abril+Fatface');
+@import url('https://fonts.googleapis.com/css?family=Abel|Comfortaa:300');
 // Overall Styles
 body
 	background-color: $FPIES-med
@@ -28,7 +28,7 @@ body a
 	right: 5px
 
 .specialFont
-	font-family: 'Abril Fatface', sans-serif;
+	font-family: 'Comfortaa', sans-serif;
 
 header, footer, main 
 	padding-left: 300px
