--- a/partials/trial.html
+++ b/partials/trial.html
@@ -1,13 +1,14 @@
 <!-- Add Reaction Button -->
 <div class="container">
+  <div class="row"></div>
   <div class="row">
-    <div class="col m4">
+    <div class="col m12 center-align">
       <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' data-target='addTrialModal' modal>Add Trial</a>
     </div>
   </div>
 
   <!-- Trial List, including modal triggers for edit, delete -->
-	<div class="row" ng-repeat="item in trials">
+<!-- 	<div class="row" ng-repeat="item in trials">
     <div class="col m2">
       <a data-target='editTrialModal' ng-click="getTrial( item.id )" modal><i class="small material-icons">mode_edit</i></a>
     </div>
@@ -19,6 +20,29 @@
     </div>
     <div class="col m4">
     	<p>{{item.start_date}}</p>
+    </div>
+  </div> -->
+
+  <div ng-repeat="item in trials">
+    <div class="row">
+      <div class="col m2 offset-m2">
+        <div style="position: relative; height: 70px;">
+          <div class="fixed-action-btn horizontal"  style="position: static">
+            <a class="btn-floating btn-large triggerBtn" style="position: absolute; left: 10px; top: 25px; background-color: #F8FF91;">
+              <strong style="color: #003366;"><i class="material-icons" style="color: #003366;">add</i></strong>
+            </a>
+            <ul>
+              <li><a class="btn-floating white" href="#!/trialDetail/{{item.id}}"><i class="material-icons" style="color: #529e99;">info</i></a></li>
+              <li><a class="btn-floating white" data-target='deleteTrialModal' ng-click="getTrial( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">delete</i></a></li>
+              <li><a class="btn-floating white" data-target='editTrialModal' ng-click="getTrial( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">mode_edit</i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col m7">
+        <a href="#!/trialDetail/{{item.id}}"><h4>{{item.food}}</h4>
+        <h5>{{item.start_date}}<span ng-show="item.end_date"> - {{item.end_date}}</span></h5></a>
+      </div>
     </div>
   </div>
 
