--- a/partials/trigger.html
+++ b/partials/trigger.html
@@ -16,29 +16,22 @@
 <!-- Trigger List, including modal triggers for edit, delete, and detail -->
   <div ng-repeat="item in triggerList | orderBy: 'food'">
     <div class="row triggerRow">
-      <div class="col m2 offset-m5">
+      <div class="col m2 offset-m3">
         <div style="position: relative; height: 70px;">
           <div class="fixed-action-btn horizontal"  style="position: static">
-            <a class="btn-floating btn-large triggerBtn" style="position: absolute; left: 10px; background-color: #F8FF91;">
-              <strong style="color: #003366;">{{$index + 1}}</strong>
+            <a class="btn-floating btn-large triggerBtn" style="position: absolute; left: 10px; top: 5px; background-color: #F8FF91;">
+              <i class="material-icons" style="color: #003366;">add</i>
             </a>
             <ul>
-              <li><a class="btn-floating white" data-target="triggerDetailModal" ng-click="getTrigger( item.id )" modal><i class="material-icons" style="color: #529e99;">launch</i></a></li>
+              <li><a class="btn-floating white" data-target="triggerDetailModal" ng-click="getTrigger( item.id )" modal><i class="material-icons" style="color: #529e99;">info</i></a></li>
               <li><a class="btn-floating white" data-target='deleteTriggerModal' ng-click="getTrigger( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">delete</i></a></li>
               <li><a class="btn-floating white" data-target='editTriggerModal' ng-click="getTrigger( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">mode_edit</i></a></li>
             </ul>
           </div>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col m12 center-align">
+      <div class="col m7">
         <a data-target="triggerDetailModal" ng-click="getTrigger( item.id )" modal><h4>{{item.food}}</h4></a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col m6 offset-m3">
-        <div class="bottomBorder"></div>
       </div>
     </div>
   </div>
@@ -155,15 +148,15 @@
 <div id="triggerDetailModal" class="modal tallModal">
   <div class="modal-content">
     <h4>{{currentTrigger.food}}</h4>
-    <div>
+    <div ng-show="currentTrigger.acute">
       <h5>Acute Symptoms:</h5>
       <span ng-repeat="item in currentTrigger.acute">{{item}}{{$last ? '' : ', '}}</span >
     </div>
-    <div>
+    <div ng-show="currentTrigger.chronic">
       <h5>Chronic Symptoms:</h5>
       <span ng-repeat="item in currentTrigger.chronic">{{item}}{{$last ? '' : ', '}}</span >
     </div>
-    <div>
+    <div ng-show="rxnArray">
       <h5>Associated Reactions:</h5>
       <span ng-repeat="thing in rxnArray">
         <a href="#!/rxnDetail/{{thing.id}}" class="modal-action modal-close" ng-click="removeOverlay()">
