--- a/sass/main.sass
+++ b/sass/main.sass
@@ -2,6 +2,7 @@ $FPIES-lite: #b2e8e3
 $FPIES-med: #91d8d3
 $FPIES: #529e99
 $text: #003366
+$link: #004891
 $accent: #F8FF91
 
 @import navbar
@@ -21,6 +22,10 @@ body
 
 body a
 	color: $text
+	cursor: pointer
+
+body a:hover
+	color: $FPIES
 
 .footer-copyright
 	position: fixed
