--- a/partials/rxn.html
+++ b/partials/rxn.html
@@ -1,26 +1,37 @@
 <!-- Add Reaction Button -->
 <div class="container">
+  <div class="row"></div>
   <div class="row">
-    <div class="col m4">
+    <div class="col m12 center-align">
       <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' data-target='addRxnModal' modal>Add Reaction</a>
     </div>
   </div>
 
   <!-- Rxn List, including modal triggers for edit, delete, and detail -->
-	<div class="row" ng-repeat="item in RxnFoods">
-    <div class="col m2">
-      <a class="waves-effect waves-teal btn-flat"  data-target='editRxnModal' ng-click="getRxn( item.id )" modal><i class="material-icons">mode_edit</i></a>
-    </div>
-    <div class="col m2">
-      <a class="waves-effect waves-teal btn-flat"  data-target='deleteRxnModal' ng-click="getRxn( item.id )" modal><i class="material-icons">delete</i></a>
-    </div>
-    <div class="col m4">
-      <a href="#!/rxnDetail/{{item.id}}"><h2>{{item.food}}</h2></a>
-    </div>
-    <div class="col m4">
-      <p>{{item.start_date}}</p>
+
+  <div ng-repeat="item in RxnFoods">
+    <div class="row">
+      <div class="col m2 offset-m2">
+        <div style="position: relative; height: 70px;">
+          <div class="fixed-action-btn horizontal"  style="position: static">
+            <a class="btn-floating btn-large triggerBtn" style="position: absolute; left: 10px; top: 25px; background-color: #F8FF91;">
+              <strong style="color: #003366;"><i class="material-icons" style="color: #003366;">add</i></strong>
+            </a>
+            <ul>
+              <li><a class="btn-floating white" href="#!/rxnDetail/{{item.id}}"><i class="material-icons" style="color: #529e99;">info</i></a></li>
+              <li><a class="btn-floating white" data-target='deleteRxnModal' ng-click="getRxn( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">delete</i></a></li>
+              <li><a class="btn-floating white" data-target='editRxnModal' ng-click="getRxn( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">mode_edit</i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col m7">
+        <a href="#!/rxnDetail/{{item.id}}"><h4>{{item.food}}</h4>
+        <h5>{{item.start_date}}<span ng-show="item.end_date"> - {{item.end_date}}</span></h5></a>
+      </div>
     </div>
   </div>
+
 </div>
 
 <!-- Add Rxn Modal -->
