--- a/partials/trialDetail.html
+++ b/partials/trialDetail.html
@@ -1,3 +1,7 @@
+<header>
+  <div class="topLine"></div>
+  <div ng-include="'partials/navbar.html'"></div>
+</header>
 <!-- Adding stuff buttons and general trial information -->
 <div class="container">
   <div class="row"></div>
