--- a/sass/main.sass
+++ b/sass/main.sass
@@ -35,16 +35,19 @@ body a:hover
 .specialFont
 	font-family: 'Comfortaa', sans-serif;
 
-header, footer, main 
+footer, main 
 	padding-left: 300px
+	
 	// Yellow line across the top of the page
 .topLine
 	background-color: $accent
 	height: 25px
 	width: calc(100vw - 300px)
+
 	// Class to overwrite default text color to what I want.
 .textColor
 	color: $text
+
 	// Making the modals tall enough for the select options
 .tallModal
-	min-height: 400px
+	min-height: 500px
