--- a/partials/chooseChild.html
+++ b/partials/chooseChild.html
@@ -1,3 +1,8 @@
+<header>
+  <div class="topLine"></div>
+  <div ng-include="'partials/navbar.html'"></div>
+</header>
+
 <div class="container">
   <div class="row">
     <div class="col m12 center-align">
