--- a/partials/rxnDetail.html
+++ b/partials/rxnDetail.html
@@ -1,3 +1,7 @@
+<header>
+  <div class="topLine"></div>
+  <div ng-include="'partials/navbar.html'"></div>
+</header>
 <div class="container">
   <div class="row"></div>
 	<!-- Add Rxn Event Modal Trigger -->
