--- a/partials/trigger.html
+++ b/partials/trigger.html
@@ -1,3 +1,7 @@
+<header>
+  <div class="topLine"></div>
+  <div ng-include="'partials/navbar.html'"></div>
+</header>
 <!-- Add Trigger Modal Trigger -->
 <div class="container">
   <div class="row"></div>
