--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -26,7 +26,7 @@
 	  <li><a class="center-align" href="#!/rxn" ng-show="isChild">Reactions</a></li>
 	  <br><br>
 	  <li>
-	  	<a class="center-align" href="#!/">Choose Child</a>
+	  	<a class="center-align" href="#!/choose">Choose Child</a>
 	  </li>
 	  <li>
 	  	<a class="center-align" href="#!">Logout</a>
