--- a/sass/main.sass
+++ b/sass/main.sass
@@ -35,7 +35,7 @@ body a:hover
 .specialFont
 	font-family: 'Comfortaa', sans-serif;
 
-footer, main 
+.pushMeOver
 	padding-left: 300px
 	
 	// Yellow line across the top of the page
@@ -50,4 +50,22 @@ footer, main
 
 	// Making the modals tall enough for the select options
 .tallModal
-	min-height: 500px
+	min-height: 80%
+
+.splashRow
+	height: 300px
+
+.splashLogo
+	max-height: 300px
+
+.splashH1
+	font-size: 4em
+
+.splash
+	margin-top: calc(50vh - 200px)
+
+.moveModal
+	height: 35px
+
+.picker__frame
+	margin-top: -50px
