--- a/partials/rxn.html
+++ b/partials/rxn.html
@@ -1,149 +1,153 @@
-<header>
-  <div class="topLine"></div>
-  <div ng-include="'partials/navbar.html'"></div>
-</header>
-<!-- Add Reaction Button -->
-<div class="container">
-  <div class="row"></div>
-  <div class="row">
-    <div class="col m12 center-align">
-      <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' data-target='addRxnModal' modal>Add Reaction</a>
+<div class="pushMeOver">  
+  <header>
+    <div class="topLine"></div>
+    <div ng-include="'partials/navbar.html'"></div>
+  </header>
+  <!-- Add Reaction Button -->
+  <div class="container">
+    <div class="row"></div>
+    <div class="row">
+      <div class="col m12 center-align">
+        <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' data-target='addRxnModal' modal>Add Reaction</a>
+      </div>
     </div>
+
+    <!-- Rxn List, including modal triggers for edit, delete, and detail -->
+
+    <div ng-repeat="item in RxnFoods">
+      <div class="row">
+        <div class="col m2 offset-m2">
+          <div style="position: relative; height: 70px;">
+            <div class="fixed-action-btn horizontal"  style="position: static">
+              <a class="btn-floating btn-large triggerBtn" style="position: absolute; left: 10px; top: 25px; background-color: #F8FF91;">
+                <strong style="color: #003366;"><i class="material-icons" style="color: #003366;">add</i></strong>
+              </a>
+              <ul>
+                <li><a class="btn-floating white" href="#!/rxnDetail/{{item.id}}"><i class="material-icons" style="color: #529e99;">info</i></a></li>
+                <li><a class="btn-floating white" data-target='deleteRxnModal' ng-click="getRxn( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">delete</i></a></li>
+                <li><a class="btn-floating white" data-target='editRxnModal' ng-click="getRxn( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">mode_edit</i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col m7">
+          <a href="#!/rxnDetail/{{item.id}}"><h4>{{item.food}}</h4>
+          <h5>{{item.start_date}}<span ng-show="item.end_date"> - {{item.end_date}}</span></h5></a>
+        </div>
+      </div>
+    </div>
+
   </div>
 
-  <!-- Rxn List, including modal triggers for edit, delete, and detail -->
-
-  <div ng-repeat="item in RxnFoods">
-    <div class="row">
-      <div class="col m2 offset-m2">
-        <div style="position: relative; height: 70px;">
-          <div class="fixed-action-btn horizontal"  style="position: static">
-            <a class="btn-floating btn-large triggerBtn" style="position: absolute; left: 10px; top: 25px; background-color: #F8FF91;">
-              <strong style="color: #003366;"><i class="material-icons" style="color: #003366;">add</i></strong>
-            </a>
-            <ul>
-              <li><a class="btn-floating white" href="#!/rxnDetail/{{item.id}}"><i class="material-icons" style="color: #529e99;">info</i></a></li>
-              <li><a class="btn-floating white" data-target='deleteRxnModal' ng-click="getRxn( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">delete</i></a></li>
-              <li><a class="btn-floating white" data-target='editRxnModal' ng-click="getRxn( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">mode_edit</i></a></li>
-            </ul>
+  <!-- Add Rxn Modal -->
+  <div id="addRxnModal" class="modal tallModal">
+    <div class="modal-content">
+      <h4>Add Reaction</h4>
+      <div class="row">
+      	<div class="col s12">
+  	      <label for="inputCreated">Start date</label>
+  				<input input-date
+  			    type="text"
+  			    name="created"
+  			    id="inputCreated"
+  			    ng-model="rxn.start_date"/>
+  			</div>
+      </div>
+      <div class="row">
+        <div class="col m12">  
+          <div input-field>
+            <select class="" ng-model="rxn.ingestion" material-select watch>
+              <option value="Direct Ingestion">Direct Ingestion</option>
+              <option value="Cross Contamination">Cross Contamination</option>
+              <option value="Breastmilk">Breastmilk</option>
+              <option value="ng-tube">ng-tube</option>
+              <option value="g-tube">g-tube</option>
+            </select>
+            <label>Ingestion</label>
           </div>
         </div>
       </div>
-      <div class="col m7">
-        <a href="#!/rxnDetail/{{item.id}}"><h4>{{item.food}}</h4>
-        <h5>{{item.start_date}}<span ng-show="item.end_date"> - {{item.end_date}}</span></h5></a>
+      <div class="row">
+      	<div class="col m12">
+  	      <div input-field>
+  	        <select class="" ng-model="rxn.trigger_id" material-select watch>
+  	          <option ng-repeat="value in triggerList" value="{{value.id}}">{{value.food}}</option>
+  	        </select>
+  	        <label>Trigger Food</label>
+  	      </div>
+  	    </div>
       </div>
+      <div class="row">
+        <div input-field class="col s12">
+          <input type="text" ng-model="rxn.food_type" placeholder="Coconut Milk">
+          <label>Type of Food</label>
+        </div>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <a href="#!/rxn" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="addRxn()">Add Reaction</a>
     </div>
   </div>
 
-</div>
+  <!-- Edit Rxn Modal -->
+  <div id="editRxnModal" class="modal tallModal">
+    <div class="modal-content">
+      <h4>Edit Reaction</h4>
+      <div class="row">
+      	<div class="col s12">
+  	      <label for="inputCreated">Start date</label>
+  				<input input-date
+  			    type="text"
+  			    name="created"
+  			    id="inputCreated"
+  			    ng-model="currentRxn.start_date"/>
+  			</div>
+      </div>
+      <div class="row">
+        <div input-field>
+          <select class="" ng-model="currentRxn.ingestion" material-select watch>
+            <option value="Direct Ingestion">Direct Ingestion</option>
+            <option value="Cross Contamination">Cross Contamination</option>
+            <option value="Breastmilk">Breastmilk</option>
+            <option value="ng-tube">ng-tube</option>
+            <option value="g-tube">g-tube</option>
+          </select>
+          <label>Ingestion</label>
+        </div>
+      </div>
+      <div class="row">
+      	<div class="col m12">
+  	      <div input-field>
+  	        <select class="" ng-model="currentRxn.trigger_id" material-select watch>
+  	          <option ng-repeat="value in triggerList" value="{{value.id}}">{{value.food}}</option>
+  	        </select>
+  	        <label>Trigger Food</label>
+  	      </div>
+  	    </div>
+      </div>
+      <div class="row">
+        <div input-field class="col s12">
+          <input type="text" ng-model="currentRxn.food_type" placeholder="Coconut Milk">
+          <label>Type of Food</label>
+        </div>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <a href="#!/rxn" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="editRxn(currentRxn.id, currentRxn)">Edit Reaction</a>
+    </div>
+  </div>
 
-<!-- Add Rxn Modal -->
-<div id="addRxnModal" class="modal tallModal">
-  <div class="modal-content">
-    <h4>Add Reaction</h4>
-    <div class="row">
-    	<div class="col s12">
-	      <label for="inputCreated">Start date</label>
-				<input input-date
-			    type="text"
-			    name="created"
-			    id="inputCreated"
-			    ng-model="rxn.start_date"/>
-			</div>
-    </div>
-    <div class="row">
-      <div input-field>
-        <select class="" ng-model="rxn.ingestion" material-select watch>
-          <option value="Direct Ingestion">Direct Ingestion</option>
-          <option value="Cross Contamination">Cross Contamination</option>
-          <option value="Breastmilk">Breastmilk</option>
-          <option value="ng-tube">ng-tube</option>
-          <option value="g-tube">g-tube</option>
-        </select>
-        <label>Ingestion</label>
+  <!-- Delete Rxn Modal -->
+  <div id="deleteRxnModal" class="modal">
+    <div class="modal-content">
+      <div class="row">
+        <div input-field class="col s12">
+          <p>Are you sure you want to delete this {{currentRxn.food_type}} reaction?</p>
+        </div>
       </div>
     </div>
-    <div class="row">
-    	<div class="col m12">
-	      <div input-field>
-	        <select class="" ng-model="rxn.trigger_id" material-select watch>
-	          <option ng-repeat="value in triggerList" value="{{value.id}}">{{value.food}}</option>
-	        </select>
-	        <label>Trigger Food</label>
-	      </div>
-	    </div>
+    <div class="modal-footer">
+      <a href="#!/rxn" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="deleteRxn(currentRxn.id)">Delete {{currentRxn.food_type}} Reaction</a>
     </div>
-    <div class="row">
-      <div input-field class="col s12">
-        <input type="text" ng-model="rxn.food_type" placeholder="Coconut Milk">
-        <label>Type of Food</label>
-      </div>
-    </div>
-  </div>
-  <div class="modal-footer">
-    <a href="#!/rxn" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="addRxn()">Add Reaction</a>
-  </div>
-</div>
-
-<!-- Edit Rxn Modal -->
-<div id="editRxnModal" class="modal tallModal">
-  <div class="modal-content">
-    <h4>Edit Reaction</h4>
-    <div class="row">
-    	<div class="col s12">
-	      <label for="inputCreated">Start date</label>
-				<input input-date
-			    type="text"
-			    name="created"
-			    id="inputCreated"
-			    ng-model="currentRxn.start_date"/>
-			</div>
-    </div>
-    <div class="row">
-      <div input-field>
-        <select class="" ng-model="currentRxn.ingestion" material-select watch>
-          <option value="Direct Ingestion">Direct Ingestion</option>
-          <option value="Cross Contamination">Cross Contamination</option>
-          <option value="Breastmilk">Breastmilk</option>
-          <option value="ng-tube">ng-tube</option>
-          <option value="g-tube">g-tube</option>
-        </select>
-        <label>Ingestion</label>
-      </div>
-    </div>
-    <div class="row">
-    	<div class="col m12">
-	      <div input-field>
-	        <select class="" ng-model="currentRxn.trigger_id" material-select watch>
-	          <option ng-repeat="value in triggerList" value="{{value.id}}">{{value.food}}</option>
-	        </select>
-	        <label>Trigger Food</label>
-	      </div>
-	    </div>
-    </div>
-    <div class="row">
-      <div input-field class="col s12">
-        <input type="text" ng-model="currentRxn.food_type" placeholder="Coconut Milk">
-        <label>Type of Food</label>
-      </div>
-    </div>
-  </div>
-  <div class="modal-footer">
-    <a href="#!/rxn" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="editRxn(currentRxn.id, currentRxn)">Edit Reaction</a>
-  </div>
-</div>
-
-<!-- Delete Rxn Modal -->
-<div id="deleteRxnModal" class="modal">
-  <div class="modal-content">
-    <div class="row">
-      <div input-field class="col s12">
-        <p>Are you sure you want to delete this {{currentRxn.food_type}} reaction?</p>
-      </div>
-    </div>
-  </div>
-  <div class="modal-footer">
-    <a href="#!/rxn" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="deleteRxn(currentRxn.id)">Delete {{currentRxn.food_type}} Reaction</a>
   </div>
 </div>
