--- a/partials/splash.html
+++ b/partials/splash.html
@@ -1,10 +1,24 @@
 <div class="splash">
-	<div class="row">
-		<div class="col m4">
-			<img src="../img/logo.png">
+	<div class="row splashRow valign-wrapper">
+		<div class="col m4 offset-m1">
+			<img class="splashLogo" src="../img/logo.png">
 		</div>
-		<div class="col m8">
-			<h1>Tender Tummies</h1>
+		<div class="col m7">
+			<div class="row">
+				<div class="col m12">
+					<h1 class="splashH1">Tender Tummies</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col m12">
+					<div class="topLine"></div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col s12">
+					<a ng-click="loginGoogle()" class="waves-effect waves-light btn white black-text">Login With Google</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
