--- a/partials/trigger.html
+++ b/partials/trigger.html
@@ -1,190 +1,193 @@
-<header>
-  <div class="topLine"></div>
-  <div ng-include="'partials/navbar.html'"></div>
-</header>
-<!-- Add Trigger Modal Trigger -->
-<div class="container">
-  <div class="row"></div>
-  <div class="row">
-    <div class="col m4 offset-m4 center-align">
-      <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' data-target='addTriggerModal' modal>Add Trigger</a>
-    </div>
-<!--     <div class="col m8">
-      <div input-field>
-        <input type="text" ng-model="searchText">
-        <label>Search</label>
+<div class="pushMeOver">
+  <header>
+    <div class="topLine"></div>
+    <div ng-include="'partials/navbar.html'"></div>
+  </header>
+  <!-- Add Trigger Modal Trigger -->
+  <div class="container">
+    <div class="row"></div>
+    <div class="row">
+      <div class="col m4 offset-m4 center-align">
+        <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' data-target='addTriggerModal' modal>Add Trigger</a>
       </div>
-    </div> -->
-  </div>
+  <!--     <div class="col m8">
+        <div input-field>
+          <input type="text" ng-model="searchText">
+          <label>Search</label>
+        </div>
+      </div> -->
+    </div>
 
-<!-- Trigger List, including modal triggers for edit, delete, and detail -->
-  <div ng-repeat="item in triggerList | orderBy: 'food'">
-    <div class="row triggerRow">
-      <div class="col m2 offset-m3">
-        <div style="position: relative; height: 70px;">
-          <div class="fixed-action-btn horizontal"  style="position: static">
-            <a class="btn-floating btn-large triggerBtn" style="position: absolute; left: 10px; top: 5px; background-color: #F8FF91;">
-              <i class="material-icons" style="color: #003366;">add</i>
-            </a>
-            <ul>
-              <li><a class="btn-floating white" data-target="triggerDetailModal" ng-click="getTrigger( item.id )" modal><i class="material-icons" style="color: #529e99;">info</i></a></li>
-              <li><a class="btn-floating white" data-target='deleteTriggerModal' ng-click="getTrigger( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">delete</i></a></li>
-              <li><a class="btn-floating white" data-target='editTriggerModal' ng-click="getTrigger( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">mode_edit</i></a></li>
-            </ul>
+  <!-- Trigger List, including modal triggers for edit, delete, and detail -->
+    <div ng-repeat="item in triggerList | orderBy: 'food'">
+      <div class="row triggerRow">
+        <div class="col m2 offset-m3">
+          <div style="position: relative; height: 70px;">
+            <div class="fixed-action-btn horizontal"  style="position: static">
+              <a class="btn-floating btn-large triggerBtn" style="position: absolute; left: 10px; top: 5px; background-color: #F8FF91;">
+                <i class="material-icons" style="color: #003366;">add</i>
+              </a>
+              <ul>
+                <li><a class="btn-floating white" data-target="triggerDetailModal" ng-click="getTrigger( item.id )" modal><i class="material-icons" style="color: #529e99;">info</i></a></li>
+                <li><a class="btn-floating white" data-target='deleteTriggerModal' ng-click="getTrigger( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">delete</i></a></li>
+                <li><a class="btn-floating white" data-target='editTriggerModal' ng-click="getTrigger( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">mode_edit</i></a></li>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col m7">
-        <a data-target="triggerDetailModal" ng-click="getTrigger( item.id )" modal><h4>{{item.food}}</h4></a>
+        <div class="col m7">
+          <a data-target="triggerDetailModal" ng-click="getTrigger( item.id )" modal><h4>{{item.food}}</h4></a>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
 
-<!-- Add Trigger Modal -->
-<div id="addTriggerModal" class="modal tallModal">
-  <div class="modal-content">
-    <h4>Add Trigger</h4>
-    <div class="row">
-      <div input-field class="col s12">
-        <input type="text" ng-model="trigger.food" placeholder="Milk">
-        <label>Food</label>
+  <!-- Add Trigger Modal -->
+  <div id="addTriggerModal" class="modal tallModal">
+    <div class="modal-content">
+      <div class="row moveModal"></div>
+      <h4>Add Trigger</h4>
+      <div class="row">
+        <div input-field class="col s12">
+          <input type="text" ng-model="trigger.food" placeholder="Milk">
+          <label>Food</label>
+        </div>
+      </div>
+      <div class="row">
+        <div input-field class="col s12">
+          <select class="" ng-model="trigger.severity" material-select watch>
+            <option value="low">Low</option>
+            <option value="medium">Medium</option>
+            <option value="high">High</option>
+          </select>
+          <label>Severity</label>
+        </div>
+      </div>
+      <div class="row">
+        <div input-field class="col s12">
+          <select class="" ng-model="trigger.chronic" material-select multiple watch>
+            <option value="Vomiting">Vomiting</option>
+            <option value="Diarrhea">Diarrhea</option>
+            <option value="Lethargy">Lethargy</option>
+            <option value="Pallor">Pallor</option>
+            <option value="Abdominal Distension">Abdominal Distension</option>
+          </select>
+          <label>Chronic Symptoms</label>
+        </div>
+      </div>
+      <div class="row">
+        <div input-field class="col s12">
+          <select class="" ng-model="trigger.acute" material-select multiple watch>
+            <option value="Vomiting">Vomiting</option>
+            <option value="Diarrhea">Diarrhea</option>
+            <option value="Lethargy">Lethargy</option>
+            <option value="Pallor">Pallor</option>
+            <option value="Abdominal Distension">Abdominal Distension</option>
+            <option value="Low Blood Pressure">Low Blood Pressure</option>
+            <option value="Low Body Temperature">Low Body Temperature</option>
+            <option value="Shock">Shock</option>
+          </select>
+          <label>Acute Symptoms</label>
+        </div>
       </div>
     </div>
-    <div class="row">
-      <div input-field class="col s12">
-        <select class="" ng-model="trigger.severity" material-select watch>
-          <option value="low">Low</option>
-          <option value="medium">Medium</option>
-          <option value="high">High</option>
-        </select>
-        <label>Severity</label>
-      </div>
-    </div>
-    <div class="row">
-      <div input-field class="col s12">
-        <select class="" ng-model="trigger.chronic" material-select multiple watch>
-          <option value="Vomiting">Vomiting</option>
-          <option value="Diarrhea">Diarrhea</option>
-          <option value="Lethargy">Lethargy</option>
-          <option value="Pallor">Pallor</option>
-          <option value="Abdominal Distension">Abdominal Distension</option>
-        </select>
-        <label>Chronic Symptoms</label>
-      </div>
-    </div>
-    <div class="row">
-      <div input-field class="col s12">
-        <select class="" ng-model="trigger.acute" material-select multiple watch>
-          <option value="Vomiting">Vomiting</option>
-          <option value="Diarrhea">Diarrhea</option>
-          <option value="Lethargy">Lethargy</option>
-          <option value="Pallor">Pallor</option>
-          <option value="Abdominal Distension">Abdominal Distension</option>
-          <option value="Low Blood Pressure">Low Blood Pressure</option>
-          <option value="Low Body Temperature">Low Body Temperature</option>
-          <option value="Shock">Shock</option>
-        </select>
-        <label>Acute Symptoms</label>
-      </div>
+    <div class="modal-footer">
+      <a href="#!/trigger" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="addTrigger()">Add Trigger</a>
     </div>
   </div>
-  <div class="modal-footer">
-    <a href="#!/trigger" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="addTrigger()">Add Trigger</a>
-  </div>
-</div>
 
-<!-- Edit Trigger Modal -->
-<div id="editTriggerModal" class="modal tallModal">
-  <div class="modal-content">
-    <h4>Edit Trigger</h4>
-    <div class="row">
-      <div input-field class="col s12">
-        <input type="text" ng-model="currentTrigger.food" placeholder="Milk">
-        <label>Food</label>
+  <!-- Edit Trigger Modal -->
+  <div id="editTriggerModal" class="modal tallModal">
+    <div class="modal-content">
+      <h4>Edit Trigger</h4>
+      <div class="row">
+        <div input-field class="col s12">
+          <input type="text" ng-model="currentTrigger.food" placeholder="Milk">
+          <label>Food</label>
+        </div>
+      </div>
+      <div class="row">
+        <div input-field class="col s12">
+          <select class="" ng-model="currentTrigger.severity" material-select watch>
+            <option value="low">Low</option>
+            <option value="medium">Medium</option>
+            <option value="high">High</option>
+          </select>
+          <label>Severity</label>
+        </div>
+      </div>
+      <div class="row">
+        <div input-field class="col s12">
+          <select class="" ng-model="currentTrigger.chronic" material-select multiple watch>
+            <option value="Vomiting">Vomiting</option>
+            <option value="Diarrhea">Diarrhea</option>
+            <option value="Lethargy">Lethargy</option>
+            <option value="Pallor">Pallor</option>
+            <option value="Abdominal Distension">Abdominal Distension</option>
+          </select>
+          <label>Chronic Symptoms</label>
+        </div>
+      </div>
+      <div class="row">
+        <div input-field class="col s12">
+          <select class="" ng-model="currentTrigger.acute" material-select multiple watch>
+            <option value="Vomiting">Vomiting</option>
+            <option value="Diarrhea">Diarrhea</option>
+            <option value="Lethargy">Lethargy</option>
+            <option value="Pallor">Pallor</option>
+            <option value="Abdominal Distension">Abdominal Distension</option>
+            <option value="Low Blood Pressure">Low Blood Pressure</option>
+            <option value="Low Body Temperature">Low Body Temperature</option>
+            <option value="Shock">Shock</option>
+          </select>
+          <label>Acute Symptoms</label>
+        </div>
       </div>
     </div>
-    <div class="row">
-      <div input-field class="col s12">
-        <select class="" ng-model="currentTrigger.severity" material-select watch>
-          <option value="low">Low</option>
-          <option value="medium">Medium</option>
-          <option value="high">High</option>
-        </select>
-        <label>Severity</label>
-      </div>
-    </div>
-    <div class="row">
-      <div input-field class="col s12">
-        <select class="" ng-model="currentTrigger.chronic" material-select multiple watch>
-          <option value="Vomiting">Vomiting</option>
-          <option value="Diarrhea">Diarrhea</option>
-          <option value="Lethargy">Lethargy</option>
-          <option value="Pallor">Pallor</option>
-          <option value="Abdominal Distension">Abdominal Distension</option>
-        </select>
-        <label>Chronic Symptoms</label>
-      </div>
-    </div>
-    <div class="row">
-      <div input-field class="col s12">
-        <select class="" ng-model="currentTrigger.acute" material-select multiple watch>
-          <option value="Vomiting">Vomiting</option>
-          <option value="Diarrhea">Diarrhea</option>
-          <option value="Lethargy">Lethargy</option>
-          <option value="Pallor">Pallor</option>
-          <option value="Abdominal Distension">Abdominal Distension</option>
-          <option value="Low Blood Pressure">Low Blood Pressure</option>
-          <option value="Low Body Temperature">Low Body Temperature</option>
-          <option value="Shock">Shock</option>
-        </select>
-        <label>Acute Symptoms</label>
-      </div>
+    <div class="modal-footer">
+      <a href="#!/trigger" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="editTrigger(currentTrigger.id, currentTrigger)">Edit Trigger</a>
     </div>
   </div>
-  <div class="modal-footer">
-    <a href="#!/trigger" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="editTrigger(currentTrigger.id, currentTrigger)">Edit Trigger</a>
-  </div>
-</div>
 
-<!-- Trigger Detail Modal -->
-<div id="triggerDetailModal" class="modal tallModal">
-  <div class="modal-content">
-    <h4>{{currentTrigger.food}}</h4>
-    <div ng-show="currentTrigger.acute">
-      <h5>Acute Symptoms:</h5>
-      <span ng-repeat="item in currentTrigger.acute">{{item}}{{$last ? '' : ', '}}</span >
-    </div>
-    <div ng-show="currentTrigger.chronic">
-      <h5>Chronic Symptoms:</h5>
-      <span ng-repeat="item in currentTrigger.chronic">{{item}}{{$last ? '' : ', '}}</span >
-    </div>
-    <div ng-show="rxnArray">
-      <h5>Associated Reactions:</h5>
-      <span ng-repeat="thing in rxnArray">
-        <a href="#!/rxnDetail/{{thing.id}}" class="modal-action modal-close" ng-click="removeOverlay()">
-          {{thing.food_type}}
-        </a>
-         | 
-      </span >
-    </div>
-  </div>
-  <div class="modal-footer">
-    <a href="#!/trigger" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
-  </div>
-</div>
-
-<!-- Delete Trigger Modal -->
-<div id="deleteTriggerModal" class="modal">
-  <div class="modal-content">
-    <div class="row">
-      <div input-field class="col s12">
-        <p>Are you sure you want to delete {{currentTrigger.food}}?</p>
+  <!-- Trigger Detail Modal -->
+  <div id="triggerDetailModal" class="modal tallModal">
+    <div class="modal-content">
+      <h4>{{currentTrigger.food}}</h4>
+      <div ng-show="currentTrigger.acute">
+        <h5>Acute Symptoms:</h5>
+        <span ng-repeat="item in currentTrigger.acute">{{item}}{{$last ? '' : ', '}}</span >
+      </div>
+      <div ng-show="currentTrigger.chronic">
+        <h5>Chronic Symptoms:</h5>
+        <span ng-repeat="item in currentTrigger.chronic">{{item}}{{$last ? '' : ', '}}</span >
+      </div>
+      <div ng-show="rxnArray">
+        <h5>Associated Reactions:</h5>
+        <span ng-repeat="thing in rxnArray">
+          <a href="#!/rxnDetail/{{thing.id}}" class="modal-action modal-close" ng-click="removeOverlay()">
+            {{thing.food_type}}
+          </a>
+           | 
+        </span >
       </div>
     </div>
+    <div class="modal-footer">
+      <a href="#!/trigger" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+    </div>
   </div>
-  <div class="modal-footer">
-    <a href="#!/trigger" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="deleteTrigger(currentTrigger.id)">Delete {{currentTrigger.food}}</a>
+
+  <!-- Delete Trigger Modal -->
+  <div id="deleteTriggerModal" class="modal">
+    <div class="modal-content">
+      <div class="row">
+        <div input-field class="col s12">
+          <p>Are you sure you want to delete {{currentTrigger.food}}?</p>
+        </div>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <a href="#!/trigger" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="deleteTrigger(currentTrigger.id)">Delete {{currentTrigger.food}}</a>
+    </div>
   </div>
 </div>
