--- a/partials/splash.html
+++ b/partials/splash.html
@@ -6,7 +6,7 @@
 		<div class="col m7">
 			<div class="row">
 				<div class="col m12">
-					<h1 class="splashH1">Tender Tummies</h1>
+					<h1 class="splashH1 specialFont">Tender Tummies</h1>
 				</div>
 			</div>
 			<div class="row">
