got pdf working teh way i want it to

--- a/partials/safe.html
+++ b/partials/safe.html
@@ -7,8 +7,11 @@
   <div class="container">
     <div class="row"></div>
     <div class="row">
-      <div class="col m12 center-align">
+      <div class="col m6 center-align">
         <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' data-target='addSafeModal' modal>Add Safe</a>
+      </div>
+      <div class="col m6 center-align">
+        <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' ng-click="downloadPDF()">Download PDF</a>
       </div>
     <!--     <div class="col m8">
         <div input-field>
