--- a/partials/trigger.html
+++ b/partials/trigger.html
@@ -7,8 +7,11 @@
   <div class="container">
     <div class="row"></div>
     <div class="row">
-      <div class="col m4 offset-m4 center-align">
+      <div class="col m6 center-align">
         <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' data-target='addTriggerModal' modal>Add Trigger</a>
+      </div>
+      <div class="col m6 center-align">
+        <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' ng-click="downloadPDF()">Download PDF</a>
       </div>
   <!--     <div class="col m8">
         <div input-field>
