got floating buttons looking right, fixed the associated rxn ng-shows/hides

--- a/partials/safe.html
+++ b/partials/safe.html
@@ -33,7 +33,7 @@
               <a class="btn-floating btn-large triggerBtn" style="position: absolute; left: 10px; top: 5px; background-color: #F8FF91;">
                 <strong style="color: #003366;"><i class="material-icons" style="color: #003366;">add</i></strong>
               </a>
-              <ul>
+              <ul style="position: absolute; right: 70px; top: 30px;">
                 <li><a class="btn-floating white" data-target='deleteSafeModal' ng-click="getSafe( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">delete</i></a></li>
                 <li><a class="btn-floating white" data-target='editSafeModal' ng-click="getSafe( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">mode_edit</i></a></li>
               </ul>
