--- a/partials/trial.html
+++ b/partials/trial.html
@@ -22,7 +22,7 @@
               <a class="btn-floating btn-large triggerBtn" style="position: absolute; left: 10px; top: 25px; background-color: #F8FF91;">
                 <strong style="color: #003366;"><i class="material-icons" style="color: #003366;">add</i></strong>
               </a>
-              <ul>
+              <ul style="position: absolute; right: 70px; top: 50px;">
                 <li><a class="btn-floating white" href="#!/trialDetail/{{item.id}}"><i class="material-icons" style="color: #529e99;">info</i></a></li>
                 <li><a class="btn-floating white" data-target='deleteTrialModal' ng-click="getTrial( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">delete</i></a></li>
                 <li><a class="btn-floating white" data-target='editTrialModal' ng-click="getTrial( item.id )" modal style="background-color: #F8FF91;"><i class="material-icons" style="color: #529e99;">mode_edit</i></a></li>
