removed ng-controller from nav

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,4 +1,4 @@
-<div ng-controller="NavCtrl">
+<div>
 	<ul id="slide-out" class="side-nav fixed z-depth-0">
 		<li>
 			<img class="heartLogo" src="../img/logo.png">
