chagned image directory name, try8ing to fix 404 error for my logo.png image

--- a/docs/partials/navbar.html
+++ b/docs/partials/navbar.html
@@ -1,7 +1,7 @@
 <div>
 	<ul id="slide-out" class="side-nav fixed z-depth-0">
 		<li>
-			<img class="heartLogo" src="../img/logo.png">
+			<img class="heartLogo" src="../image/logo.png">
 		</li>
 		<li>
 			<h2 class="center-align titleInNav specialFont">{{view}}</h2>
